Process Hacker

1.3.6.6
 * NEW/IMPROVED:
   * Basic support for Windows 7 in Process Hacker and KProcessHacker
   * Proper symbol support with dbghelp.dll
   * Private, Shared and Shareable Working Set columns
   * Improved handle viewing (KProcessHacker) - more object types are visible
   * Better start addresses
   * Stack viewing uses KProcessHacker on Windows Vista
   * Elevation button in Options now spawns a child options window instead of 
     restarting Process Hacker elevated
   * Can open process properties from the handle list
   * Aggressive mode (start with "-a" command line option)
   * Better "could not initialize configuration" message for Windows Vista
   * New Terminator method: assigns a job object to the process and terminates it
 * FIXED:
   * Service properties Key handle leak
   * Handle deletion detection
   * Unhandled exceptions when viewing performance/statistics for a non-existent process
   * Network connections for processes without icons would not be displayed
 * REMOVED:
   * Useless Window menu items (PITA + causes memory leaks due to Microsoft's poor 
     implementation of MenuItem)
   * Registers from the thread window

1.3.6.5
 * NEW/IMPROVED:
   * #2702907 - "CSR Processes: Enable termination of multiple processes"
   * #2702909 - "CSR Processes: Show process name when confirming termination"
   * #2702911 - "Show process name when terminating process in properties"
   * #2702929 - "Add a Cancel button in Options"
   * #2713088 - "Network: Ctrl+A and Ctrl+C should copy the processes' names"
   * #2714130 - "Option to disable/enable all highlighting colors"
   * Job information
   * "Inject DLL" function
   * Statistics times in System Information and process properties
   * Highlighting system
   * Configurable max. samples and plotter step size
   * Network list with icons
   * Can close multiple handles at once
   * Less memory usage
   * Confirmation dialogs are now consistent and use new Vista interfaces where possible