@@ -54,6 +54,19 @@
 #define JOB_OBJECT_ALL_ACCESS       (STANDARD_RIGHTS_REQUIRED | SYNCHRONIZE | \
                                      0x1F)
 
+typedef struct _SYSTEM_MODULE_INFORMATION
+{
+    ULONG Reserved[2];
+    PVOID Base;
+    ULONG Size;
+    ULONG Flags;
+    USHORT Index;
+    USHORT Unknown;
+    USHORT LoadCount;
+    USHORT ModuleNameOffset;
+    CHAR ImageName[256];
+} SYSTEM_MODULE_INFORMATION, *PSYSTEM_MODULE_INFORMATION;
+
 NTSTATUS NTAPI ZwOpenProcessToken(
     HANDLE ProcessHandle,
     ACCESS_MASK DesiredAccess,
@@ -65,6 +78,10 @@ NTSTATUS NTAPI ZwSetInformationProcess(
     PROCESSINFOCLASS ProcessInformationClass,
     PVOID ProcessInformation,
     ULONG ProcessInformationLength
+    );
+
+typedef NTSTATUS (NTAPI *_NtClose)(
+    HANDLE Handle
     );
 
 #endif
