@@ -20,12 +20,10 @@
  * along with Process Hacker.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#define _KPH_PRIVATE
 #include "include/kph.h"
 
-_PsGetProcessJob PsGetProcessJob = NULL;
-_PsSuspendProcess PsSuspendProcess = NULL;
-_PsResumeProcess PsResumeProcess = NULL;
-_MmCopyVirtualMemory MmCopyVirtualMemory = NULL;
+static char StandardPrologue[] = { 0x8b, 0xff, 0x55, 0x8b, 0xec };
 
 PVOID GetSystemRoutineAddress(WCHAR *Name)
 {
@@ -50,10 +48,29 @@ NTSTATUS KphNtInit()
 {
     NTSTATUS status = STATUS_SUCCESS;
     
+    __NtClose = GetSystemRoutineAddress(L"NtClose");
+    
+    /* NtClose is used as a reference point for any addresses 
+       dependent on where the kernel is loaded. */
+    if (!__NtClose)
+        return STATUS_NOT_SUPPORTED;
+    
     MmCopyVirtualMemory = GetSystemRoutineAddress(L"MmCopyVirtualMemory");
     PsGetProcessJob = GetSystemRoutineAddress(L"PsGetProcessJob");
     PsResumeProcess = GetSystemRoutineAddress(L"PsResumeProcess");
     PsSuspendProcess = GetSystemRoutineAddress(L"PsSuspendProcess");
+    
+    /* Initialize function pointers */
+    if (OffPsTerminateProcess)
+    {
+        __PsTerminateProcess = (_PsTerminateProcess)((ULONG)__NtClose + OffPsTerminateProcess);
+        dprintf("PsTerminateProcess: 0x%08x\n", __PsTerminateProcess);
+        if (memcmp(__PsTerminateProcess, StandardPrologue, 5) != 0)
+        {
+            __PsTerminateProcess = NULL;
+            dprintf("PsTerminateProcess failed memory check\n");
+        }
+    }
     
     return status;
 }
